# real-emoji

./: .ackrc  .editorconfig  .gitignore  .gitmodules  Makefile  NOTICE  Pipfile  README.md  _config.yml  config.json  config.toml  emoji.csv  emoji.py  emojis.json  font.html  index.html  index.md  netlify.toml  package-lock.json  package.json  pyproject.toml  setup.cfg  try.html
_data/: emoji.json
_includes/: emojis.html
_layouts/: default.html
assets/: package-lock.json  package.json
assets/sass/: main.scss
content/: _index.md  abortion.md  accident.md  automation.md  beer_bottle.md  climate_crisis.md  cocaine.md  condom.md  crime.md  depression.md  ecstasy.md  fail.md  fetus.md  font.md  harassment.md  lazy.md  lsd.md  masturbation.md  menstruation.md  moralizing.md  naked_man.md  naked_woman.md  panties.md  patronizing.md  platform_economy.md  polution.md  poverty.md  protest.md  punishment.md  racism.md  sex.md  stickers.md  stupid.md  suicide.md  svickova.md  ugly.md  violence.md  weed.md
content/emoji/: abortion.html  accident.html  automation.html  beer_bottle.html  climate_crisis.html  cocaine.html  condom.html  crime.html  depression.html  ecstasy.html  fail.html  fetus.html  harassment.html  lazy.html  lsd.html  masturbation.html  menstruation.html  moralizing.html  naked_man.html  naked_woman.html  panties.html  patronizing.html  platform_economy.html  (+12 more)
css/: main.scss
emoji/: build.py  common.py  copy.py  posts.py  try.py
layouts/: font.html  index.html  try.html
templates/: base.html  font.html  index.html  page.html
test/: index.html
(+9 files in other folders)
