[tool.poetry]
name = "emoji"
version = "0.1.0"
description = "Build Real Emoji"
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.3"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
